# core

./: Cargo.toml  Cargo.toml-E  Makefile.toml  README.md  RELEASES.md  clippy.toml  deny.toml  grep  rust-toolchain.toml
.cargo/: config.toml
.github/actions/git-identity/: action.yaml
.github/actions/latest-release/: action.yaml
.github/actions/release-notes/: action.yaml
.github/ci/: calculate-version.rs
.github/workflows/: ci.yaml  crates.yaml  patch.yaml  publish.yaml  release.yaml  tag.yaml  verify.yaml  version.yaml
crates/api/: Cargo.toml  README.md
crates/api/src/: api.rs  lib.rs
crates/ci/: Cargo.toml
crates/ci/src/: calculate-version.rs
crates/encoding/: Cargo.toml  README.md
crates/encoding/src/: lib.rs
crates/otel/: Cargo.toml
crates/otel/src/: init.rs  lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/urlencode/: Cargo.toml
src/: api.rs  html.rs  http.rs  lib.rs  state.rs
supply-chain/: audits.toml  config.toml
