[package]
name = "credibil-core"
description = "Credibil core utilities"
readme = "README.md"
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1"
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["alloc"] }

[workspace]
# members = ["core"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
description = """
Decentralized Identifier (DID) and X509 utilities for Rust. See features for implemented DID methods and key
management or use core functionality to implement your own.
"""
edition = "2024"
exclude = [".*", "/docs", "snapshots/"]
homepage = "https://credibil.io"
keywords = ["decentralized", "identity"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/credibil/core"
rust-version = "1.87"
version = "0.1.0"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.98"
credibil-did = { path = "did" }
credibil-ecc = { git = "https://github.com/credibil/se.git" }
credibil-jose = { git = "https://github.com/credibil/se.git" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
test-utils = { path = "crates/test-utils" }

# [patch."https://github.com/credibil/se"]
# credibil-ecc = { path = "../se/ecc" }
# credibil-jose = { path = "../se/jose" }
