[package]
name = "credibil-core"
description = "Credibil core utilities"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.42", features = ["serde"] }
serde.workspace = true

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
description = """
Core libraries for building decentralized identity solutions with Credibil.
"""
edition = "2024"
homepage = "https://credibil.io"
keywords = ["decentralized", "identity"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/credibil/core"
rust-version = "1.88"
version = "0.2.0"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.99"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["alloc"] }
