[package]
name = "credibil-api"
description = "API types for Credibil"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bytes = "1.10.1"
http.workspace = true
http-body = "1.0.1"
http-body-util = "0.1"
serde.workspace = true
serde_json.workspace = true
