[package]
name = "credibil-encoding"
description = "Data encoding utilities for Credibil"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
percent-encoding = "2.3.1"
serde.workspace = true
serde_json.workspace = true
