[package]
name = "credibil-telemetry"
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
http.workspace = true
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
rand = "0.9.2"
serde.workspace = true
tokio = { version = "1.47.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
